<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Send Card or SMS</string>
    <string name="instruction">Please fill the fields:</string>
    <string name="action_settings">Settings</string>
    <string name="duck">duck</string>
    <string name="to_person_name">To Person Name</string>
    <string name="phone_number">To Phone Number</string>
    <string name="greetings_text">Enter Greetings Text</string>
    <string name="signature">Your Signature</string>
    <string name="submit">Submit</string>
    <string name="choose_greeting_card_template">Choose Greeting Card Template</string>
    <string name="greeting_card_image">Chosen Greeting Card Template Image</string>
    <string name="sms_only">SMS</string>
    
</resources>
