<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/to_whom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/to_person_name"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <CheckBox
                android:id="@+id/checkboxSmsOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="processSMSOnly"
                android:text="@string/sms_only" />
        </LinearLayout>

        <EditText
            android:id="@+id/greetings_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/greetings_text"
            android:inputType="textMultiLine"
            android:minLines="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/galleryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/choose_greeting_card_template"
                android:onClick="openGallery"
                android:src="@android:drawable/ic_menu_gallery"
                android:visibility="gone" />

            <EditText
                android:id="@+id/signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="9"
                android:hint="@string/signature"
                android:inputType="textMultiLine"
                android:minLines="2" />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/submit"
                android:onClick="processForm"
                android:src="@android:drawable/ic_menu_share"
                android:visibility="invisible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/greeting_card_image" />
    </LinearLayout>

</ScrollView>